[tool.poetry]
name = "pomodoro_beeminder"
version = "0.1.0"
description = "Beeminder integration for Time++ Pomodoro gnome extension"
authors = ["Venky Iyer <indigoviolet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiorun = "^2020.11.1"
fire = "^0.3.1"
more-itertools = "^8.6.0"
requests = "^2.25.1"
monitored-subprocess = {git = "https://github.com/indigoviolet/monitored_subprocess"}
pysqlitedb = {git = "https://github.com/indigoviolet/pysqlitedb"}
snoop = "^0.2.5"
backoff = "^1.10.0"
rich = "^9.5.1"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
snoop = "^0.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pomo_tailer = "pomodoro_beeminder.tailer:main"
pomo_poster = "pomodoro_beeminder.post:main"
